# pysam-sysml2

./: .codespellignorewords  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  MIGRATING.md  README.rst  index.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  CODEOWNERS.txt  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  ci_cd.yml  deploy.yml  label.yml  pages.yml  static.yml
doc/: .vale.ini  Makefile  make.bat  requirements.txt
doc/changelog.d/: 10.dependencies.md  102.added.md  103.fixed.md  105.fixed.md  11.dependencies.md  110.added.md  111.documentation.md  113.added.md  115.added.md  117.documentation.md  118.maintenance.md  121.fixed.md  122.maintenance.md  123.miscellaneous.md  125.fixed.md  126.maintenance.md  13.dependencies.md  132.documentation.md  133.dependencies.md  136.fixed.md  138.miscellaneous.md  139.added.md  14.dependencies.md  141.miscellaneous.md  148.dependencies.md  15.dependencies.md  150.fixed.md  154.fixed.md  155.fixed.md  157.documentation.md  158.test.md  161.dependencies.md  166.dependencies.md  170.dependencies.md  174.dependencies.md  177.dependencies.md  184.maintenance.md  185.miscellaneous.md  186.fixed.md  187.miscellaneous.md  (+36 more)
doc/source/: changelog.rst  conf.py  contrib.rst  contributing.rst  examples.rst  index.rst  links.rst
doc/source/_static/code/: computer-cost-static.py  computer-cost.py  creating-elements-static.py  creating-elements.py  download-diagrams-static.py  download-diagrams.py  simplified-sam-project-static.py  simplified-sam-project.py  weight-bike-static.py  weight-bike.py  weightBike.py
doc/source/api/: index.rst
doc/source/api-reference/: ansys-sysml2-project.rst  connector.rst  diagram-downloader.rst  diagram-manager.rst  factory.rst  loader.rst  project.rst  sysmlelement.rst
doc/source/documentation/: connector.rst  dev_guide.rst  diagram-downloader.rst  diagram-element.rst  diagram-manager.rst  factory.rst  index.rst  installation.rst  loader.rst  project.rst  sysmlelement.rst  sysmltools.rst
doc/source/documentation/tests/: index.rst  server.rst
doc/source/examples/: bike-weight.rst  bike_weight.rst  computer-cost.rst  computer_cost.rst  creating-elements.rst  creating_elements.rst  download-diagrams.rst  download_diagrams.rst  index.rst  manage-projects.rst  simplified-sam-project.rst
doc/source/getting-started/: index.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst
doc/source/user_guide/api/: approaches.rst  create-conn.rst  diagram-model.rst  information.rst  load-model.rst  manage-projects.rst  read-model.rst  write-model.rst
doc/source/users/: index.rst
doc/source/users/api/: create-conn.rst  create_conn.rst  dev_conn.rst  diagram-model.rst  diagram_model.rst  information.rst  load-model.rst  load_model.rst  read-model.rst  read_model.rst  (+2 more)
examples/: Bike.xmi  README.md
examples/code/: bike-rim-weight-update-static.py  bike-rim-weight-update-transaction-static.py  bike-rim-weight-update-transaction.py  bike-rim-weight-update.py  computer-cost-static.py  computer-cost.py  creating-elements-static.py  creating-elements.py  download-diagrams.py  manage-projects.py  simplified-sam-project-static.py  simplified-sam-project.py  weight-bike-static.py  weight-bike.py
logs/: pytest-logs.txt
oldpipeline/: ci_cd.yml  label.yml
tests/: conftest.py  parent_test_class.py  test.py  test_metadata.py
tests/e2e/: _sam_binary_import.py  conftest.py  test_bike.py  test_commits.py  test_commits_scripting.py  test_commits_sysml.py  test_computer.py  test_diagrams.py  test_project_crud.py  test_queries.py  test_requirements_import.py  test_values.py
tests/mocked_server/: mocked_server.py
tests/mocked_server/routes/: __init__.py  const.py  route_class.py  route_functions.py
tests/unit/: conftest.py  const.py  mocked_connector.py  mocked_sam_connector.py  test_metadata.py
version/: index.html
version/0.1/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_sources/: contributing.rst.txt
version/0.1/api/: index.html
version/0.1/examples/: bike-weight.html  computer-cost.html  creating-elements.html  download-diagrams.html  index.html  simplified-sam-project.html
version/0.1/user_guide/: index.html
version/0.2/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/_sources/: changelog.rst.txt
version/0.2/_static/: search.json
version/0.2/api/: index.html
version/0.2/examples/: bike-weight.html  computer-cost.html  creating-elements.html  download-diagrams.html  index.html  simplified-sam-project.html
version/0.2/getting_started/: index.html
version/0.2/user_guide/: index.html
version/0.3/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.3/examples/: computer-cost.html  simplified-sam-project.html
version/0.3/getting_started/: index.html
version/0.3/user_guide/: index.html
version/dev/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: contributing.rst.txt  index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/examples/: bike-weight.html  computer-cost.html  creating-elements.html  download-diagrams.html  index.html  manage-projects.html  simplified-sam-project.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: changelog.html  contributing.html  genindex.html  index.html  py-modindex.html
version/stable/_sources/: changelog.rst.txt  index.rst.txt
version/stable/_static/: search.json
version/stable/api/: index.html
version/stable/examples/: bike-weight.html  creating-elements.html  download-diagrams.html  index.html  simplified-sam-project.html
version/stable/getting_started/: index.html
(+3021 files in other folders)
